app/assets/stylesheets/global.scss
/* ... */
.scanner-unk {
  padding-left: 28px !important;
  color: $type-lighter-color;
}

.inline-loader-wrapper {
  display: block;
  position: relative;
  width: 170px;
  margin: auto;
  .loader-msg {
    display: inline-block;
    margin-top: 14px;
    font-style: italic;
    float: left;
  }
  .gear-loader-wrapper {
    float: left;
    margin-right: 5px;
  }
}

#rl-loader, #tg-loader, #sb-loader {
  width: 100%;
}

// Specific styles for sandbox report
.vertical-data-report-table {
  margin: 10px 0 15px 0;
  tr td, tr th {
    border-bottom: none;
    padding: 4px;
    font-size: 8pt;
  }
  .code-wrap-col {
    padding-top: 2px;
    padding-bottom: 2px;
  }
  .code-snippet {
    font-size: 8pt;
  }
}


// dbinebri: adding a minor tweak for the toolbar labels on show page > research tab
@media screen and (min-width: 1600px) {
  #research-tab-toolbar .toolbar-button-label .toolbar-button-text {
    padding-top: 1px;
  }
}
#temp_row .delete-search-image{
  background-image: url(image_path('icon_cancel_grey.svg'));
  display: block;
  padding: 7px;
  margin-right: 15px;
}

.score-col {
  width: 100%;
  display: block;
}

// kh: overwriting jquery ui slider styles
.ui-slider.form-control.nav-tool-content-wrapper{
  background: white!important;
  margin-bottom: 10px
}
.ui-slider.form-control{
  background: white!important;
  margin-bottom: 10px
}
.ui-slider .ui-slider-handle {
  width: 1.75em;
  height: 2.8em;
  display: flex;
  align-items: center;
  justify-content: center;
}

.form-control .ui-slider-handle.ui-state-focus{
  background: #44a9d1;
  color: white;
  border: none;
}
.form-control .ui-slider-handle.ui-state-active{
  background: $primary-section-color;
  border: none;
}

// Creating form dialog for when we want to use a dialog instead of a dropdown
.form-dialog {
  font-family: 'Open Sans', sans-serif !important;
  border-radius: 4px;
  border: none !important;
  .ui-dialog-titlebar {
    background-color: $bug-section-color;
    line-height: 2.25em;
    height: 54px;
    padding-left: 15px;

    .ui-dialog-title {
      font-size: 14pt;
      font-weight: 300;
    }
  }
  .form-wrapper {
    padding: 20px;
  }
  .form-control, input, textarea {
    background-color: transparent;
    border: 4px solid $content-bg-color;
    outline: 1px solid darken($faint-neutral-color, 12%);
  }
  input {
    height: 24px;
    margin-top: 1px;
  }
  input:focus, textarea:focus {
    outline: 1px solid darken($faint-neutral-color, 12%);
    border: 4px solid $content-bg-color;
  }
  input:focus {
    height: 28px;
    margin-top: -1px;
  }
}

div[aria-describedby='create-detection-dialog'] {
  .ui-dialog-title {
    padding-left: 36px;
    background-size: 26px 26px;
    background-repeat: no-repeat;
    background-position: left center;
    background-image: url(image_path('icon_target_white.svg'));
  }
}

.form-group {
  .nested-col-row {
    margin-right: -4px;
    margin-left: -4px;
  }
  .nested-col {
    padding: 0 4px;
  }
}

.uneditable-formfield {
  line-height: 2em;
  color: $type-lighter-color;
}


#file-det-dropdown {
  min-width: 420px;
}

#new-amp-detection-name-section{ display: none;}
#new-amp-detection-name-dd-section {
  display: none;
  select.form-control {
    font-size: 8pt;
    height: 25px;
  }
  select.form-control:focus {
    margin-top: -6px;
    height: 25px;
  }
  input {
    height: 25px;
    margin-top: -6px;
    width: 100%;
  }
  .nested-col-row {
    margin-top: 4px;
    margin-right: -2px !important;
    margin-left: -2px;
  }
  .uneditable-formfield {
    font-size: 8pt;
  }
}

.toolbar .dropdown.open .toolbar-button.detection-button {
  background-image: url(image_path('icon_target_white.svg'));
}

.tg-data-present, .tg-data-missing, .sb-data-present, .sb-data-missing, .rl-data-present, .rl-data-missing {
  display: none;
}


// dbinebri: adding button here for download json buttons
.download-small-button {
  background-image: url(image_path('icon_download.svg'));
  background-repeat: no-repeat;
  width: 20px;
  height: 23px;
  float: right;
  display: inline-block;
  border: none;
}

// dbinebri: make sure the full json areas stay visible in collapsed state
.data-report-wrapper {
  .collapse {
    display: block;
    visibility: visible;
    overflow: scroll;
    &.in {  // .in is expanded state
      overflow-y: hidden;
    }
  }
}

// dbinebri: ensure json areas stay at a min-height on collapse, and gray on expand/collapse transition
#collapse_tg_json, #collapse_sb_json {
  min-height: 300px;
  margin: 0 2px;
  background: darken($content-bg-color, 4%);
  .report-size {
    padding: 0;
    width: initial;
  }
}

// dbinebri: minor file rep ui fixes

// dbinebri: ensure the button here has the right font
#create-detection-dialog button.primary {
  font-family: "Open Sans", sans-serif;
}

// add a few tweaks for this dropdown so no overlap with last character and down caret at breakpoints
// super wide width
@media screen and (min-width: 1801px) {
  #show-edit-ticket-status-button {
    padding-right: 16px;
    &.inline-select-dropdown {
      background-position: right 0px center;
    }
  }
}

// medium wide width
@media screen and (max-width: 1800px) {
  #show-edit-ticket-status-button {
    padding-left: 4px;
    padding-right: 12px;
    font-size: 11px;
    &.inline-select-dropdown {
      background-size: 14px;
      background-position: right -1px center;
    }
  }
}


// dbinebri: FF - tiny vertical alignment fix for 2nd button in this panel
@-moz-document url-prefix() {
  .dispute-owner-buttons-wrapper button#index_change_assign {
    position: relative;
    top: -2px;
  }
}

// dbinebri: need a separate th class so the bg sort icon isn't affected by generic .text-center
#file-rep-datatable_wrapper .th-center {
  text-align: center;
}

